Fix data file references

--- a/SPX FFR.ipynb
+++ b/SPX FFR.ipynb
@@ -123,7 +123,7 @@
    ],
    "source": [
     "# Read in SPX file\n",
-    "spx = pd.read_csv('../Research/SPX Full 7622.csv')\n",
+    "spx = pd.read_csv('../data/SPX Full 7622.csv')\n",
     "spx.head()"
    ]
   },
@@ -228,7 +228,7 @@
    ],
    "source": [
     "# Read in FFR file\n",
-    "ffr = pd.read_csv('../Research/FFR/DFF.csv')\n",
+    "ffr = pd.read_csv('data/DFF.csv')\n",
     "ffr.head()"
    ]
   },
